--- a/CSS - My Site/styles.css
+++ b/CSS - My Site/styles.css
@@ -4,6 +4,26 @@ body{
 h1{
     margin-top: 0;
 }
-div{
+
+.top-container{
     background-color: #e4f9f5;
+    height: 200px;
+    width: 200px;
+    border: 10px solid black;
+}
+
+.middle-container{
+    background-color: red;
+    height: 200px;
+    width: 200px;
+    border: 20px solid black;
+    margin-left: 220px;
+}
+
+.bottom-container{
+    background-color: yellow;
+    height: 200px;
+    width: 200px;
+    border: 10px solid black;
+    margin-left: 460px;
 }
