--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -5,7 +5,7 @@ h1{
     margin-top: 0;
 }
 
-.top-container{
+/* .top-container{
     background-color: #e4f9f5;
     height: 200px;
     width: 200px;
@@ -26,4 +26,8 @@ h1{
     width: 200px;
     border: 10px solid black;
     margin-left: 460px;
+} */
+
+.top-container{
+    background-color: #e4f9f5;
 }
