--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -1,8 +1,23 @@
 body{
     margin: 0;
+    text-align: center;
+    font-family: "Merriweather Sans", sans-serif;
+    font-size: 2em;
 }
 h1{
-    margin-top: 0;
+    margin-top: 50px auto 0 auto;
+    /* font-size: 562.5%; 100% = 16px, 90/16 = 562.5% */
+    font-size: 5.625rem;
+    font-family: "Sacramento", cursive;
+}
+
+h2{
+    font-family: "Montserrat", sans-serif;
+    font-size: 2.5rem;
+}
+
+h3{
+    font-family: "Montserrat", sans-serif;
 }
 
 /* .top-container{
@@ -30,4 +45,18 @@ h1{
 
 .top-container{
     background-color: #e4f9f5;
+    position: relative;
+    padding-top: 100px;
+}
+
+.top-cloud{
+    position: absolute;
+    right: 300px;
+    top: 50px;
+}
+
+.bottom-cloud{
+    position: absolute;  
+    left: 300px;
+    bottom: 300px; 
 }
