--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -2,22 +2,44 @@ body{
     margin: 0;
     text-align: center;
     font-family: "Merriweather Sans", sans-serif;
-    font-size: 2em;
+    color: #40514E;
+    /* font-size: 2em; */
 }
 h1{
+    color: #0fffff;
     margin-top: 50px auto 0 auto;
     /* font-size: 562.5%; 100% = 16px, 90/16 = 562.5% */
     font-size: 5.625rem;
+    /* line-height: 2; */
     font-family: "Sacramento", cursive;
 }
 
+.top-h2{
+    color:  #0fffff;
+}
+
 h2{
+    color: #00b8b8;
     font-family: "Montserrat", sans-serif;
     font-size: 2.5rem;
+    font-weight: normal;
+    padding-bottom: 10px;
 }
 
 h3{
+    color: #11999E;
     font-family: "Montserrat", sans-serif;
+}
+
+a{
+    color: #000000;
+    font-family: "Montserrat", sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #eaf6f6;
 }
 
 /* .top-container{
@@ -43,10 +65,68 @@ h3{
     margin-left: 460px;
 } */
 
+p{
+    line-height: 2;
+}
+
+hr{
+    border: dotted #EAF6F6 6px;
+    border-bottom: none;
+    width: 5%;
+    margin: 100px auto;
+}
+
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+}
+
+.code-img{
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+.code-p{
+    /* clear: left; */
+}
+
+.bike-img{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+
+.intro{
+    width: 30%;
+    margin: auto;
+}
+
 .top-container{
     background-color: #e4f9f5;
+    background-image: linear-gradient(to bottom, #3e00ff, #006dff, #009dff, #00c2ff, #00e2ff);
     position: relative;
     padding-top: 100px;
+}
+
+.middle-container{
+    margin: 100px 0;
+}
+
+.bottom-container{
+    background-color: #66bfbf;
+    padding: 40px 0 20px;
+}
+
+.contact-msg{
+    width: 40%;
+    margin: 40px auto 60px;
+}
+
+.copyright{
+    color:#eaf6f6;
+    padding: 20px 0;
 }
 
 .top-cloud{
@@ -60,3 +140,30 @@ h3{
     left: 300px;
     bottom: 300px; 
 }
+
+.btn {
+    background: #30e3cd;
+    background-image: -webkit-linear-gradient(top, #30e3cd, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cd, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cd, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cd, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cd, #2bc4ad);
+    -webkit-border-radius: 12;
+    -moz-border-radius: 12;
+    border-radius: 12px;
+    font-family: "Montserrat", sans-serif;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  }
