--- a/TINDOG-START_MASTER/css/styles.css
+++ b/TINDOG-START_MASTER/css/styles.css
@@ -64,14 +64,19 @@ p{
 /* Title Images */
 
 .title-image{
-    width: 60%;
+    width: 20%;
+    right: 25%;
     transform: rotate(25deg);
+    position: absolute;
 }
 
 /* Feature Section */
 
 #features{
     padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
+    z-index: 1;
 }
 
 .feature-box{
@@ -128,4 +133,43 @@ p{
 
 .pricing-column{
     padding: 3% 2%;
+}
+
+/* CTA Section */
+
+#cta{
+    background-color: #ff4c68;
+    text-align: center;
+    padding: 7% 15%;
+    color: #fff;
+}
+
+.cta-heading{
+    font-family: "Montserrat", sans-serif;
+    font-size: 3.5rem;
+    line-height: 1.5;
+    font-weight: 900;
+}
+
+ /* Footer section */
+
+ #footer{
+    text-align: center;
+    padding: 7% 15%;
+ }
+
+.social-icon{
+    margin: 20px 10px;
+}
+
+@media(max-width : 1028px)
+{
+    #title{
+        text-align: center;
+    }
+    .title-image{
+        position: static;
+        transform: rotate(0);
+        width: 60%;
+    }
 }
